--- a/style.css
+++ b/style.css
@@ -1,19 +1,37 @@
 .container {
-  display: grid;
-  grid-template-columns: 100px 100px 100px;
-  grid-template-rows: 100px 100px 100px;
+  display: inline-grid;
+  grid-template: 40px 40px 40px 40px 40px / 40px 40px 40px 40px 40px;
+  background-color: lightblue;
 }
 
-.item {
-  background-color: orange;
-  border: 1px solid black;
+.room {
+  border: 1px solid;
+  font-size: 50%;
   text-align: center;
 }
 
-.first-row {
-  background-color: pink;
+#living-room {
+  grid-column: 1 / 6;
+  grid-row: 1 / 3;
+  /* grid-area: 1 / 1 / 3 / 6; */
 }
 
-.last-column {
-  background-color: lightblue;
+#bathroom {
+  grid-column: 1 / 2;
+  grid-row: 3 / 6;
+}
+
+#bedroom {
+  grid-column: 4 / 6;
+  grid-row: 3 / 5;
+}
+
+#closet {
+  grid-column: 4 / 6;
+  grid-row: 5 / 6;
+}
+
+#kitchen {
+  grid-column: 2 / 4;
+  grid-row: 3 / 6;
 }
